--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .phpunit.result.cache
+public/assets/css/test.css.map
+public/assets/css/test.css
+public/assets/scss/test.scss
