--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
             "database/factories",
             "app/Models",
             "app/Console/Commands",
-            "app/Http/Controllers"
+            "app/Http/Controllers",
+            "app/Libraries"
         ],
         "psr-4": {
             "App\\": "app/"
