--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Palazzin
+APP_NAME="Palazzin AG"
 APP_ENV=local
 APP_KEY=base64:aNGHMK4WdTZ4yLldyNKX8vPu73dnURk/xD79q+WxadE=
 APP_DEBUG=true
@@ -29,6 +29,7 @@ MAIL_PORT=587
 MAIL_USERNAME=master@palazzin.ch
 MAIL_PASSWORD=NGc462z5
 MAIL_ENCRYPTION=tls
+MAIL_SUBJECT="[Palazzin] "
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
