--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME="Palazzin AG"
 APP_ENV=local
 APP_KEY=base64:aNGHMK4WdTZ4yLldyNKX8vPu73dnURk/xD79q+WxadE=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://roomapp
 
 LOG_CHANNEL=stack
