--- a/.env
+++ b/.env
@@ -30,6 +30,8 @@ MAIL_USERNAME=master@palazzin.ch
 MAIL_PASSWORD=NGc462z5
 MAIL_ENCRYPTION=tls
 MAIL_SUBJECT="[Palazzin]"
+MAIL_FROM_ADDRESS=master@palazzin.ch
+MAIL_FROM_NAME="Palazzin AG"
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
