--- a/.env
+++ b/.env
@@ -1,17 +1,26 @@
 APP_NAME="Palazzin AG"
 APP_ENV=local
 APP_KEY=base64:aNGHMK4WdTZ4yLldyNKX8vPu73dnURk/xD79q+WxadE=
-APP_DEBUG=true
-APP_URL=http://roomapp
+#APP_DEBUG=true
+APP_DEBUG=false
+#APP_URL=http://roomapp
+APP_URL=https://palazzin.ch/
 
 LOG_CHANNEL=stack
-
+#local
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=roomapp
+#DB_USERNAME=root
+#DB_PASSWORD=12345678
+#
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=gasserd1.mysql.db.internal
 DB_PORT=3306
-DB_DATABASE=roomapp
-DB_USERNAME=root
-DB_PASSWORD=12345678
+DB_DATABASE=gasserd1_palazzin
+DB_USERNAME=gasserd1_palaz
+DB_PASSWORD=XqQzjuEy
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -19,9 +28,9 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=240
 QUEUE_DRIVER=sync
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+#REDIS_HOST=127.0.0.1
+#REDIS_PASSWORD=null
+#REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=asmtp.mail.hostpoint.ch
