--- a/.local.env
+++ b/.local.env
@@ -26,11 +26,11 @@ QUEUE_DRIVER=sync
 MAIL_DRIVER=smtp
 MAIL_HOST=asmtp.mail.hostpoint.ch
 MAIL_PORT=587
-MAIL_USERNAME=master@palazzin.ch
-MAIL_PASSWORD=NGc462z5
+MAIL_USERNAME=meischter@palazzin.ch
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 MAIL_SUBJECT="[Palazzin]"
-MAIL_FROM_ADDRESS=master@palazzin.ch
+MAIL_FROM_ADDRESS=meischter@palazzin.ch
 MAIL_FROM_NAME="Palazzin AG"
 
 PUSHER_APP_ID=
