--- a/.production.env
+++ b/.production.env
@@ -27,7 +27,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=asmtp.mail.hostpoint.ch
 MAIL_PORT=587
 MAIL_USERNAME=master@palazzin.ch
-MAIL_PASSWORD=NGc462z5
+MAIL_PASSWORD=Njj2pofILYCb11ORGcDf
 MAIL_ENCRYPTION=tls
 MAIL_SUBJECT="[Palazzin]"
 MAIL_FROM_ADDRESS=master@palazzin.ch
