--- a/.local.env
+++ b/.local.env
@@ -25,10 +25,10 @@ QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
 MAIL_HOST=asmtp.mail.hostpoint.ch
-MAIL_PORT=587
+MAIL_PORT=465
 MAIL_USERNAME=meischter@palazzin.ch
-MAIL_PASSWORD=
-MAIL_ENCRYPTION=tls
+MAIL_PASSWORD=S5i8zZWd
+MAIL_ENCRYPTION=SSL
 MAIL_SUBJECT="[Palazzin]"
 MAIL_FROM_ADDRESS=meischter@palazzin.ch
 MAIL_FROM_NAME="Palazzin AG"
