--- a/.production.env
+++ b/.production.env
@@ -1,7 +1,7 @@
 APP_NAME="Palazzin AG"
 APP_ENV=production
 APP_KEY=base64:aNGHMK4WdTZ4yLldyNKX8vPu73dnURk/xD79q+WxadE=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://palazzin.ch/
 
 LOG_CHANNEL=stack
@@ -25,12 +25,12 @@ QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
 MAIL_HOST=asmtp.mail.hostpoint.ch
-MAIL_PORT=587
-MAIL_USERNAME=master@palazzin.ch
-MAIL_PASSWORD=Njj2pofILYCb11ORGcDf
-MAIL_ENCRYPTION=tls
+MAIL_PORT=465
+MAIL_USERNAME=meischter@palazzin.ch
+MAIL_PASSWORD=S5i8zZWd
+MAIL_ENCRYPTION=SSL
 MAIL_SUBJECT="[Palazzin]"
-MAIL_FROM_ADDRESS=master@palazzin.ch
+MAIL_FROM_ADDRESS=meischter@palazzin.ch
 MAIL_FROM_NAME="Palazzin AG"
 
 PUSHER_APP_ID=
