--- a/.htaccess
+++ b/.htaccess
@@ -6,7 +6,7 @@
     RewriteCond %{REQUEST_URI} !^public
     RewriteRule ^(.*)$ public/$1 [L]
 </IfModule>
-<Files .env>
+<FilesMatch "\.(env)">
 order allow,deny
 Deny from all
-</Files>
+</FilesMatch>
