--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
         "@babel/cli": "^7.2.3",
         "@babel/core": "^7.3.4",
         "@babel/preset-env": "^7.3.4",
-        "axios": "^0.18",
+        "axios": "^0.18.1",
         "babel-cli": "^6.26.0",
+        "babel-minify": "^0.5.1",
         "babel-preset-minify": "^0.5.1",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "lodash": "^4.17.5",
+        "jquery": "^3.4.1",
+        "lodash": "^4.17.15",
         "popper.js": "^1.12",
         "vue": "^2.5.7"
     },
